--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,20 @@ body {
     max-width: 576px;
 }
 
+@media (max-width: 576px) {
+    .container {
+        max-width: 100%;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+    main {
+        flex: 1;
+    }
+}
+
 .social-button {
     display: block;
     height: 40px;
@@ -19,4 +33,3 @@ body {
     background-color: white;
     border-radius: 50%;
 }
-
